config/k8s-manifest/gmfs-artha-holder/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholderapp
  namespace: arthatest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: artha
  template:
    metadata:
      labels:
        app: artha
    spec:
      containers:
        - name: placeholderapp
          image: aputra/myapp-195:v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
