config/k8s-manifest/gmfs-artha-holder/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: placeholderapp
  namespace: arthatest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: artha
