config/k8s-manifest/gmfs-artha-holder/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: placeholderapp
  namespace: arthatest
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/security-groups: sg-08588056f07029ff8
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/load-balancer-name: gmfs-ire-prod-alb-core

spec:
  ingressClassName: alb
  rules:
    - host: test.gmfs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placeholderapp
                port:
                  number: 8080
